kubernetes/sample-deployment.yaml
# TASK:
# Implement Kubernetes manifests
---
###
# Deploymnent definition
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: sample-app
  namespace: default
  labels:
    app: sample-app
spec:
  selector:
    matchLabels:
      app: sample-app
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: backend
        image: postuond/backend:latest
        livenessProbe:
          httpGet:
            path: /test
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "150m"
      - name: frontend
        image: postuond/frontend:latest
        ports:
        - name: sample-app-port
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /_nginx_status
            port: sample-app-port
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /app/test
            port: sample-app-port
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "150m"
---
###
# Service definition
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  namespace: default
  labels:
    app: sample-app
spec:
  type: NodePort
  selector:
    app: sample-app
  ports:
  - port: 8080
    protocol: TCP
    nodePort: 31234
    targetPort: sample-app-port

---
###
# Ingress definition
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
spec:
  rules:
    - host: sample-app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-app
                port:
                  number: 8080
